manifests/app/dreamkast/overlays/production/main/deployment-dreamkast-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamkast-ui
spec:
  template:
    spec:
      containers:
      - name: dreamkast-ui
