manifests/app/dreamkast/overlays/production/main/deployment-dreamkast-weaver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dreamkast-weaver
spec:
  template:
    spec:
      containers:
      - name: dkw-serve
