manifests/app/dreamkast/overlays/production/main/deployment-dreamkast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
    tier: dreamkast
  name: dreamkast
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast
    spec:
      containers:
      - name: dreamkast
        image: dreamkast-ecs
        ports:
          - containerPort: 3000
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1500m"
          limits:
            memory: "2048Mi"
            cpu: "1500m"
        livenessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 5
          periodSeconds: 10
        startupProbe:
          httpGet:
            port: 3000
            path: /
          failureThreshold: 30
          periodSeconds: 10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
    tier: dreamkast-ui
  name: dreamkast-ui
spec:
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-ui
    spec:
      containers:
      - image: dreamkast-ui
        name: dreamkast-ui
        ports:
        - containerPort: 3001
        resources:
          requests:
            memory: "2048Mi"
            cpu: "1500m"
          limits:
            memory: "2048Mi"
            cpu: "1500m"
