manifests/app/dreamkast/overlays/production/main/deployment-fifo-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
    tier: dreamkast-fifo-worker
  name: dreamkast-fifo-worker
spec:
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-fifo-worker
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-fifo-worker
    spec:
      containers:
      - name: dreamkast
        image: dreamkast-ecs
        imagePullPolicy: Always
        command: ["bundle"]
        args: [
          "exec",
          "aws_sqs_active_job",
          "--queue",
          "fifo"
        ]
