manifests/app/dreamkast/overlays/production/main/ingress.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dreamkast
  labels:
    app: dreamkast
spec:
  virtualhost:
    fqdn: event.cloudnativedays.jp
    tls:
      secretName: cert-manager/wildcard-cloudnativedays-jp
  routes:
    - conditions:
      - prefix: /
      services:
      - name: dreamkast
        port: 80
      loadBalancerPolicy:
        strategy: Cookie
      cookieRewritePolicies:
      - name: _session_id
        secure: true
      - name: X-Contour-Session-Affinity
        secure: true
    - conditions:
      - prefix: /cable
      enableWebsockets: true
      services:
      - name: dreamkast
        port: 80
      cookieRewritePolicies:
      - name: _session_id
        secure: true
      - name: X-Contour-Session-Affinity
        secure: true
    - conditions:
      - prefix: /cicd2023/ui
      services:
      - name: dreamkast-ui
        port: 3001
      cookieRewritePolicies:
      - name: _session_id
        secure: true
      - name: X-Contour-Session-Affinity
        secure: true
    - conditions:
      - prefix: /_next
      services:
      - name: dreamkast-ui
        port: 3001
      cookieRewritePolicies:
      - name: _session_id
        secure: true
      - name: X-Contour-Session-Affinity
        secure: true
